--- a/03_APP_03.MD
+++ b/03_APP_03.MD
@@ -1,4 +1,4 @@
-# ACN IBO情報ポータル[先頭ページ](https://faq.acn.jp.net)に戻る
+# ACN IBO情報ポータル[先頭ページ](https://faq.acn.jp.net)
 ## [このページのURL](https://todo)
 
 ## 3-3. Flash Mobile申込フロー
