--- a/03_APP_03.MD
+++ b/03_APP_03.MD
@@ -1,5 +1,5 @@
 # ACN IBO情報ポータル[先頭ページ](https://faq.acn.jp.net)
-## [このページのURL](https://todo)
+## [このページのURL](03_APP_03.MD)
 
 ## 3-3. Flash Mobile申込フロー
 * [URLリンク](static/flash_mobile_flow.pdf)
