--- a/03_APP_03.MD
+++ b/03_APP_03.MD
@@ -1,7 +1,4 @@
-# ACN IBO情報ポータル[先頭ページ](https://faq.acn.jp.net)
-## [このページのURL](03_APP_03.MD)
-
-## 3-3. Flash Mobile申込フロー
+## [3-3. Flash Mobile申込フロー](03_APP_03.MD)
 * [URLリンク](static/flash_mobile_flow.pdf)
 
 ### [3-3-1. 申込み前のチェックリスト](https://s3.amazonaws.com/acnjpn/back_office/images/training/FLASH_M_Checklist_MNP.pdf)
