--- a/03_APP_03.MD
+++ b/03_APP_03.MD
@@ -1,5 +1,5 @@
 ## [3-3. Flash Mobile申込フロー](03_APP_03.MD)
-* URLリンク: [static/flash_mobile_flow.pdf](static/flash_mobile_flow.svg)
+* [フローURLリンク](static/flash_mobile_flow.svg)
 
 ![Flash Mobile申込フロー](static/flash_mobile_flow.svg)
 
