--- a/03_APP_03.MD
+++ b/03_APP_03.MD
@@ -21,4 +21,4 @@
 ### [3-3-6. かんたん設定ガイドPDF](https://s3.amazonaws.com/acnjpn/back_office/images/training/FLASH_M_kantanguide.pdf)
 * URLリンク: [https://s3.amazonaws.com/acnjpn/back_office/images/training/FLASH_M_kantanguide.pdf](https://s3.amazonaws.com/acnjpn/back_office/images/training/FLASH_M_kantanguide.pdf)
 
-## [![ACN IBO共有情報](static/keyboard-return-24.png)ACN IBO情報ポータル](00_FAQ.MD)
+## ![](static/keyboard-return-24.png)[ACN IBO共有情報](00_FAQ.MD)
